tests/paczka1/fuzzy1/77616709.err
Error in line 2: m9f A593 14,2
Error in line 4: A593 A593 1,2
Error in line 6: m9f S10 37,6
Error in line 25: JKbQcp0F S10 98,8
Error in line 31: JKbQcp0F S20 71,0
Error in line 29: TBfW A932 20,4
Error in line 22: ynSM0 A593 20,9
Error in line 35: TBfW A593 14,9
